[package]
name = "trust-dns-server"
version = "0.9.3"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS server with DNSec support.
 Eventually this could be a replacement for BIND9. The DNSSec support allows
 for live signing of all records, in it does not currently support
 records signed offline. The server supports dynamic DNS with SIG0 authenticated
 requests. TRust-DNS is based on the Tokio and Futures libraries, which means
 it should be easily integrated into other software that also use those
 libraries.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-server"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "../README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

# custom build steps
build = "build.rs"

[features]

[lib]
name = "trust_dns_server"
path = "src/lib.rs"

[[bin]]
name = "named"
path = "src/named.rs"

[dependencies]
backtrace = "^0.2.1"
chrono = "^0.2.21"
docopt = "^0.6.78"
error-chain = "0.1.12"
futures = "^0.1.6"
lazy_static = "^0.2.1"
log = "^0.3.5"
native-tls = "^0.1"
openssl = "^0.9.6"
rand = "^0.3"
rustc-serialize = "^0.3.18"
rusqlite = { version = "^0.8.0", features = ["bundled"] }
time = "^0.1"
tokio-core = "^0.1"
tokio-tls = "^0.1"
toml = "^0.1"
trust-dns = { version = "^0.9", path = "../client" }
