[package]
name = "trust-dns-server"
version = "0.15.0-alpha.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
TRust-DNS is a safe and secure DNS server with DNSec support.
 Eventually this could be a replacement for BIND9. The DNSSec support allows
 for live signing of all records, in it does not currently support
 records signed offline. The server supports dynamic DNS with SIG0 authenticated
 requests. TRust-DNS is based on the Tokio and Futures libraries, which means
 it should be easily integrated into other software that also use those
 libraries.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns-server"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

[features]
default = []
dnssec-openssl = ["dnssec", "trust-dns/dnssec-openssl", "trust-dns-proto/dnssec-openssl"]
dnssec-ring = ["dnssec", "trust-dns/dnssec-ring", "trust-dns-proto/dnssec-ring"]
dnssec = []

# TODO: Need to figure out how to be consistent with ring/openssl usage...
# dns-over-https-openssl = ["dns-over-openssl", "trust-dns/dns-over-https-openssl", "dns-over-https"]
dns-over-https-rustls = ["dns-over-https", "dns-over-rustls", "trust-dns/dns-over-https-rustls"]
dns-over-https = ["h2", "http", "trust-dns-https"]

# TODO: migrate all tls and tls-openssl features to dns-over-tls, et al
dns-over-openssl = ["dns-over-tls", "dnssec-openssl", "trust-dns-openssl", "trust-dns/dns-over-openssl"]
dns-over-rustls = ["dns-over-tls", "dnssec-ring", "trust-dns-rustls", "rustls", "trust-dns/dns-over-rustls"]
dns-over-tls = []

# This is a deprecated feature...
tls-openssl = ["dns-over-openssl"]
tls = ["dns-over-openssl"]

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["trust-dns/mtls"]

[lib]
name = "trust_dns_server"
path = "src/lib.rs"

[[bin]]
name = "named"
path = "src/named.rs"

[dependencies]
backtrace = "^0.3"
bytes = "0.4.9"
chrono = "^0.4"
clap = "^2.27"
env_logger = "^0.5"
failure = "0.1"
futures = "^0.1.17"
h2 = { version = "0.1", optional = true }
http = { version = "0.1", optional = true }
lazy_static = "^1.0"
log = "^0.4.1"
rand = "^0.5"
rusqlite = { version = "0.14.0", features = ["bundled"] }
rustls = { version = "0.13", optional = true }
serde = "^1.0"
serde_derive = "^1.0"
time = "^0.1"
tokio = "^0.1.6"
tokio-executor = "^0.1"
tokio-io = "^0.1"
tokio-reactor = "^0.1"
tokio-rustls = "^0.7"
tokio-tcp = "^0.1"
tokio-timer = "^0.2"
tokio-udp = "^0.1"
toml = "^0.4"
trust-dns = { version = "0.15.0-alpha", path = "../client" }
trust-dns-https = { version = "0.1.0-alpha", path = "../https", optional = true }
trust-dns-proto = { version = "0.5.0-alpha", path = "../proto" }
trust-dns-openssl = { version = "0.4.0-alpha", path = "../openssl", optional = true }
trust-dns-rustls = { version = "0.4.0-alpha", path = "../rustls", optional = true }

[dev-dependencies]
native-tls = "^0.1"
trust-dns-native-tls = { version = "0.4.0-alpha", path = "../native-tls" }
tokio-tls = "^0.2"