[package]
name = "hickory-util"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Utilities that complement Hickory DNS.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/crate/hickory-util"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[badges]
#github-actions = { repository = "bluejekyll/hickory", branch = "main", workflow = "test" }
codecov = { repository = "hickory-dns/hickory-dns", branch = "main", service = "github" }
maintenance = { status = "actively-developed" }

[features]
tls-aws-lc-rs = [
    "hickory-proto/tls-aws-lc-rs",
    "hickory-client/tls-aws-lc-rs",
    "hickory-resolver/tls-aws-lc-rs",
    "__tls",
]
https-aws-lc-rs = [
    "hickory-proto/https-aws-lc-rs",
    "hickory-client/https-aws-lc-rs",
    "hickory-resolver/https-aws-lc-rs",
    "tls-aws-lc-rs",
    "__https",
]
quic-aws-lc-rs = [
    "hickory-resolver/quic-aws-lc-rs",
    "tls-aws-lc-rs",
    "__quic",
]
h3-aws-lc-rs = [
    "hickory-resolver/h3-aws-lc-rs",
    "quic-aws-lc-rs",
    "__h3",
]

tls-ring = [
    "hickory-proto/tls-ring",
    "hickory-client/tls-ring",
    "hickory-resolver/tls-ring",
    "__tls",
]
https-ring = [
    "hickory-proto/https-ring",
    "hickory-client/https-ring",
    "hickory-resolver/https-ring",
    "tls-ring",
    "__https",
]
quic-ring = [
    "hickory-resolver/quic-ring",
    "tls-ring",
    "__quic",
]
h3-ring = [
    "hickory-resolver/h3-ring",
    "quic-ring",
    "__h3",
]

__tls = ["dep:rustls"]
__https = []
__quic = []
__h3 = []

webpki-roots = [
    "dep:webpki-roots",
    "hickory-proto/webpki-roots",
    "hickory-client/webpki-roots",
    "hickory-resolver/webpki-roots",
]
rustls-platform-verifier = [
    "hickory-proto/rustls-platform-verifier",
    "hickory-client/rustls-platform-verifier",
    "hickory-resolver/rustls-platform-verifier",
]

dnssec-aws-lc-rs = ["hickory-client/dnssec-aws-lc-rs", "hickory-proto/dnssec-aws-lc-rs", "hickory-resolver/dnssec-aws-lc-rs", "__dnssec"]
dnssec-ring = ["hickory-client/dnssec-ring", "hickory-proto/dnssec-ring", "hickory-resolver/dnssec-ring", "__dnssec"]
__dnssec = []

[dependencies]
clap = { workspace = true, default-features = false, features = [
    "std",
    "cargo",
    "derive",
    "color",
    "suggestions",
    "help",
    "usage",
] }
console.workspace = true
data-encoding.workspace = true
rustls = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
hickory-client.workspace = true
hickory-proto.workspace = true
hickory-recursor.workspace = true
hickory-resolver = { workspace = true, features = ["system-config"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
webpki-roots = { workspace = true, optional = true }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
