[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.0", features = ["derive", "std"] }
data-encoding = "2.9"
futures = { version = "0.3", default-features = false }
hickory-proto = { version = "0.26.0-alpha.1", path = "../../crates/proto", default-features = false, features = ["std", "dnssec-aws-lc-rs", "tokio"] }
tokio = { version = "1.21", features = ["macros", "net", "io-util", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
hickory-client = { version = "0.26.0-alpha.1", path = "../../crates/client"}
