[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
data-encoding = { workspace = true }
futures = { workspace = true, default-features = false }
hickory-proto = { workspace = true, default-features = false, features = ["std"] }
hickory-net = { workspace = true, default-features = false, features = ["dnssec-aws-lc-rs", "tokio"] }
tokio = { workspace = true, features = ["macros", "net", "io-util", "rt-multi-thread"] }
time = { workspace = true, features = ["formatting", "macros", "parsing"] }
