[package]
name = "hickory-client"

description = """
hickory-client is a safe and secure DNS client library with a variety of protocol features
(DNSSEC, SIG(0), DoT, DoQ, DoH). It can be used to connect to and query DNS servers
asynchronously using the Tokio runtime.
"""

documentation = "https://docs.rs/hickory-client"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
backtrace = ["hickory-proto/backtrace"]

tls-aws-lc-rs = ["hickory-proto/tls-aws-lc-rs"]
https-aws-lc-rs = ["hickory-proto/https-aws-lc-rs"]
quic-aws-lc-rs = ["hickory-proto/quic-aws-lc-rs"]
h3-aws-lc-rs = ["hickory-proto/h3-aws-lc-rs"]

tls-ring = ["hickory-proto/tls-ring"]
https-ring = ["hickory-proto/https-ring"]
quic-ring = ["hickory-proto/quic-ring"]
h3-ring = ["hickory-proto/h3-ring"]

webpki-roots = ["hickory-proto/webpki-roots"]
rustls-platform-verifier = ["hickory-proto/rustls-platform-verifier"]

dnssec-aws-lc-rs = ["hickory-proto/dnssec-aws-lc-rs", "__dnssec"]
dnssec-ring = ["hickory-proto/dnssec-ring", "__dnssec"]
__dnssec = []

serde = ["dep:serde", "hickory-proto/serde"]

# enables experimental the mDNS (multicast) feature
mdns = ["hickory-proto/mdns"]

[lib]
name = "hickory_client"
path = "src/lib.rs"

[dependencies]
cfg-if.workspace = true
data-encoding.workspace = true
futures-channel = { workspace = true, default-features = false, features = ["std"] }
futures-util = { workspace = true, default-features = false, features = ["std"] }
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }
hickory-proto = { workspace = true, features = ["text-parsing", "tokio"] }

[dev-dependencies]
futures = { workspace = true, default-features = false, features = ["std", "executor"] }
test-support.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "std"] }
webpki-roots = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
