[package]
name = "trust-dns-https"
version = "0.4.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Trust-DNS is a safe and secure DNS library. This is an extension for the Trust-DNS client to use DNS over HTTPS.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/trust-dns"
homepage = "http://www.trust-dns.org/index.html"
repository = "https://github.com/bluejekyll/trust-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/trust-dns" }
appveyor = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }
codecov = { repository = "bluejekyll/trust-dns", branch = "master", service = "github" }

#[features]

# WARNING: there is a bug in the mutual tls auth code at the moment see issue #100
# mtls = ["tls"]

[lib]
name = "trust_dns_https"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
data-encoding = "2.1.0"
failure = "0.1"
futures-preview = "0.3.0-alpha"
h2 = "0.2.0-alpha.2"
http = "0.1"
log = "0.4"
rustls = "0.16"
tokio-executor = "0.2.0-alpha"
tokio-rustls = "0.12.0-alpha"
tokio-net = "0.2.0-alpha"
# disables default features, i.e. openssl...
trust-dns-proto = { version = "0.8.0", path = "../proto", features = ["tokio-compat"], default-features = false }
trust-dns-rustls = { version = "0.7.0", path = "../rustls", default-features = false }
typed-headers = "0.1"
webpki-roots = { version = "0.17" }
webpki = "0.21"

[dev-dependencies]
env_logger = "^0.6"
tokio = "0.2.0-alpha"
